Изменил фотографии, видео и карусель

--- a/src/template.html
+++ b/src/template.html
@@ -81,7 +81,7 @@
       <div class="container">
         <div class="row">
           <div class="half-display col-md-6 text-center d-flex align-items-center justify-content-center">
-            <img src=<%=require( "./img/common.png")%> alt="">
+            <img src=<%=require( "./img/together.jpg")%> alt="">
           </div>
           <div class="half-display col-lg-5 offset-lg-1 col-md-6 pl-md-1 d-flex flex-column justify-content-center">
             <div class="wrapper ">
@@ -215,63 +215,63 @@
       </div>
     </section>
     <section id="masters" class="animated" data-animation="fadeInUp fadeIn">
-      <div class="container irisha">
+      <div class="container andrey">
         <div class="row align-items-center">
           <div class="col-12">
             <h2>Преподаватели</h2>
           </div>
-          <div class="col-md-7 image">
-            <img src=<%=require( "./img/ira.png")%> alt="">
+          <div class="col-md-6 image text-center">
+            <img src=<%=require( "./img/andrey.jpg")%> alt="">
           </div>
-          <div class="col-md-5">
-            <div class="wrapper align-items-center">
-              <h3>Ирина Парамонова</h3>
+          <div class="col-md-6">
+            <div class="wrapper">
+              <h3>Андрей Кадочников</h3>
               <ul class="fa-ul">
                 <li>
-                  <i class="fa-li fas fa-circle"></i> Я в танцах уже более 10 лет, если не считать бальные в детстве. В 2007 году познакомилась с парными
-                  социальными танцами, с тех пор перепробовала больше 10 направлений и постоянно открываю для себя что-то
-                  новенькое
+                  <i class="fa-li fas fa-circle"></i>Танцую зук 6 лет, из них 4 года - преподавательский стаж. Помимо зука занимался такими танцами
+                  как: хастл, сальса Нью-Йорк, сальса касино, бачата Sensual, форро, WCS! А это значит - при регулярных
+                  занятиях вы будете знать фигуры нескольких танцев, свободно танцевать на дискотеках и Open-air.</li>
+                <li>
+                  <i class="fa-li fas fa-circle"></i>С первых занятий вы начнёте не просто делать базовые шаги, но понимать принципы построения движений,
+                  я научу вас понимать простое и сложное взаимодействие, видеть рисунок танца, ощущать диалог в паре. Вы будете получать удовольствие и новые впечатления
+                  от того чему научились. Несмотря на большое многообразие стилей вы научитесь понимать партнёра любого из направлений
+                  Зука!
                 </li>
                 <li>
-                  <i class="fa-li fas fa-circle"></i>Зук - самый пластичный танец из всех. В нём девушка танцует всеми частями тела, даже волосами, и может
-                  продемонстрировать всю свою гибкость и грацию. Зук интересный и разнообразный по ведению. Партнёр ведёт
-                  партнёршу не только на шаги и повороты, но и полностью задаёт положение её корпуса в пространстве, может
+                  <i class="fa-li fas fa-circle"></i>Мы разберём по косточкам движения и связки характерные для зука: движения с головой (так называемые хэдворки), нестандартные
+                  вращения, техники ведения за плечи, различные волны и сложные крутые «верёвочки», управление кистями.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container irisha">
+        <div class="row align-items-center">
+          <div class="col-md-5">
+            <div class="wrapper align-items-center">
+              <h3>Алиса Канцибер</h3>
+              <ul class="fa-ul">
+                <li>
+                  <i class="fa-li fas fa-circle"></i> Занимаюсь танцами в общей сложности 2 года. Начала с бачаты и сальсы. Попробовав зук я поняла что "это моё".  
+                  На данный момент активно развиваюсь в двух танцевальных направлениях: зук и бачата sensual, постоянно улучшаю свою технику и открываю для себя что то новое.
+                  Я помогу вам научиться слышать и чувствовать танец, раскрыв все его грани.
+                </li>
+                <li>
+                  <i class="fa-li fas fa-circle"></i>Занятия зуком позволяют развить пластику и гибкость в танце. Овладев техникой зука, вы сможете расслабляться и максимально кайфовать в танце,
+                  чутко слушая и понимая ведение пртнёра. Зук самый интересный и разнообразный танец потому что в нём учавствуют все части тела: волосы, плечи, лопатки, грудная клетка, прорабатывается вся анатомия.
+                  Партнёр ведёт партнёршу не только на шаги и повороты, но и полностью задаёт положение её корпуса в пространстве, может
                   вести отдельно на движение бёдрами или головой</li>
                 <li>
-                  <i class="fa-li fas fa-circle"></i>Танцуя зук - можно очень хорошо расслабиться, снять зажимы, и в то же время мягко прорабатываются такие
-                  мышцы спины, которые мы никогда не используем при нашем сидячем образе жизни. И конечно же музыка! Ритмы
-                  зука не дают усидеть на месте!
-                  <i class="far fa-smile"></i>
+                  <i class="fa-li fas fa-circle"></i> Зук танцуется на три счёта, его можно танцевать под разную музыку, особенно хорошо заходит под кизомбу,
+                   но у него есть и своя специфическая музыка с характерным ритмом, которая не оставит вас равнодушным.
+                   По зуку постоянно проводятся дискотеки и опер-эйры, конгрессы и фестивали, где вы сможете вдоволь потанцевать этот прекрасный танец в 
+                   кругу единомышленников <i class="far fa-smile"></i>
                 </li>
               </ul>
             </div>
           </div>
-          <div class="container andrey">
-            <div class="row align-items-center">
-              <div class="col-md-6">
-                <div class="wrapper">
-                  <h3>Андрей Кадочников</h3>
-                  <ul class="fa-ul">
-                    <li>
-                      <i class="fa-li fas fa-circle"></i>Танцую зук 5 лет, из них 3 года - преподавательский стаж. Помимо зука занимался такими танцами
-                      как: хастл, сальса Нью-Йорк, сальса касино, бачата Sensual, форро, WCS! А это значит - при регулярных
-                      занятиях вы будете знать фигуры нескольких танцев, свободно танцевать на дискотеках и Open-air.</li>
-                    <li>
-                      <i class="fa-li fas fa-circle"></i>С первых занятий вы начнёте не просто делать базовые шаги, но понимать принципы построения движений,
-                      я постараюсь донести до вас рисунок танца, передать своё видение простого и сложного взаимодействия
-                      в паре! Несмотря на большое многообразие стилей вы научитесь понимать партнёра любого из направлений
-                      Зука!
-                    </li>
-                    <li>
-                      <i class="fa-li fas fa-circle"></i>Мы разберём по косточкам движения и связки характерные только для зука: движения с головой, нестандартные
-                      вращения, техники ведения за плечи, различные волны и сложные крутые «верёвочки».</li>
-                  </ul>
-                </div>
-              </div>
-              <div class="col-md-6 image text-center">
-                <img src=<%=require( "./img/andrey.png")%> alt="">
-              </div>
-            </div>
+          <div class="col-md-7 image">
+            <img src=<%=require( "./img/alisa.jpg")%> alt="">
           </div>
         </div>
       </div>
@@ -284,10 +284,17 @@
           </div>
           <div class="col-md-7">
             <div class="embed-responsive embed-responsive-16by9">
-              <iframe class="embed-responsive-16by9" width="560" height="315" src="https://www.youtube.com/embed/YbjiMR5wMF4" 
-                allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              <iframe 
+                width="560" 
+                height="315" 
+                src="https://www.youtube.com/embed/Xi_PaxtH-WY" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen>
+              </iframe>
             </div>
           </div>
+             
         </div>
       </div>
     </section>       
@@ -295,7 +302,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h2>Что будет на занятиях?</h2>
+            <h2>Наши видео</h2>
           </div>
         </div>        
         <div class="row justify-content-center">
@@ -303,28 +310,144 @@
             <div id="main_carousel" class="carousel swiper-container slide" data-ride="false" data-interval="false">
               <div class="swiper-wrapper">
                 <div class="carousel_item swiper-slide">
-                  <div class="wrapper">
-                    <img class="d-block w-100" src=<%=require( "./img/base.jpg")%> alt="First slide">
-                    <div class="carousel-caption d-md-block">
-                      <h5>Базовые элементы</h5>
-                    </div>
-                  </div>
+                  <iframe 
+                    width="900" 
+                    height="600" 
+                    src="https://www.youtube.com/embed/pIDdUYQ5MRE" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen>
+                  </iframe>
                 </div>
                 <div class="carousel_item swiper-slide">
-                  <div class="wrapper">
-                    <img class="d-block w-100" src=<%=require( "./img/supports.jpg")%> alt="Second slide">
-                    <div class="carousel-caption d-md-block">
-                      <h5>Поддержки</h5>
-                    </div>
-                  </div>
+                  <iframe 
+                    width="900" 
+                    height="600" 
+                    src="https://www.youtube.com/embed/4zLWt-LcpCE" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen>
+                  </iframe>
                 </div>
                 <div class="carousel_item swiper-slide">
-                  <div class="wrapper">
-                    <img class="d-block w-100" src=<%=require( "./img/rotate.jpg")%> alt="Third slide">
-                    <div class="carousel-caption d-md-block">
-                      <h5>Обычные и угловые вращения</h5>
-                    </div>
-                  </div>
+                  <iframe 
+                    width="900" 
+                    height="600" 
+                    src="https://www.youtube.com/embed/Ci86wwxCDpw" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen>
+                  </iframe>
+                </div>
+                <div class="carousel_item swiper-slide">
+                  <iframe 
+                    width="900" 
+                    height="600" 
+                    src="https://www.youtube.com/embed/fy6jwGNzkXA" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen>
+                  </iframe>
+                </div>
+                <div class="carousel_item swiper-slide">
+                  <iframe 
+                    width="900" 
+                    height="600" 
+                    src="https://www.youtube.com/embed/8oE9VAWIElA" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen>
+                  </iframe>
+                </div>
+                <div class="carousel_item swiper-slide">
+                  <iframe 
+                    width="900" 
+                    height="600" 
+                    src="https://www.youtube.com/embed/NRsyt2SGxRE" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen>
+                  </iframe>
+                </div>
+                <div class="carousel_item swiper-slide">
+                  <iframe 
+                    width="900" 
+                    height="600" 
+                    src="https://www.youtube.com/embed/ZpnqBdTMCU0" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen>
+                  </iframe>
+                </div>
+                <div class="carousel_item swiper-slide">
+                  <iframe 
+                    width="900" 
+                    height="600" 
+                    src="https://www.youtube.com/embed/aoJsOVoSRV0"
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen>
+                  </iframe>
+                </div>
+                <div class="carousel_item swiper-slide">
+                  <iframe 
+                    width="900" 
+                    height="600" 
+                    src="https://www.youtube.com/embed/kcmRueNX9FA"
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen>
+                  </iframe>
+                </div>
+                <div class="carousel_item swiper-slide">
+                  <iframe 
+                    width="900" 
+                    height="600" 
+                    src="https://www.youtube.com/embed/oPS2iAie4Qk"
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen>
+                  </iframe>
+                </div>
+                <div class="carousel_item swiper-slide">
+                  <iframe 
+                    width="900" 
+                    height="600" 
+                    src="https://www.youtube.com/embed/aoJsOVoSRV0"
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen>
+                  </iframe>
+                </div>
+                <div class="carousel_item swiper-slide">
+                  <iframe 
+                    width="900" 
+                    height="600" 
+                    src="https://www.youtube.com/embed/Gf4ZWyWVY8A"
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen>
+                  </iframe>
+                </div>
+                <div class="carousel_item swiper-slide">
+                  <iframe 
+                    width="900" 
+                    height="600" 
+                    src="https://www.youtube.com/embed/gqIPwOWNbnE" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen>
+                  </iframe>
+                </div>
+                <div class="carousel_item swiper-slide">
+                  <iframe 
+                    width="900" 
+                    height="600" 
+                    src="https://www.youtube.com/embed/Ot2PLPOgIEA" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen>
+                  </iframe>
                 </div>
                 <div class="carousel_item swiper-slide">
                   <div class="wrapper">
