изменён логотип, изменено время занятий

--- a/src/template.html
+++ b/src/template.html
@@ -26,7 +26,7 @@
       <div class="row">
         <nav class="navbar col-12 navbar-expand-lg navbar-light">
           <a class="navbar-brand" href="#">
-            <img class="logo" src=<%=require( "./img/logo-blue.png")%> alt=""></a>
+            <img class="logo" src=<%=require( "./img/logo_mark_script_blue.png")%> alt=""></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="lines d-flex flex-column">
@@ -99,7 +99,7 @@
                   <div class="col-1 icon">
                     <i class="far fa-clock fa-fw"></i>
                   </div>
-                  <div class="col-10 context">увеличенная длительность занятий - одно занятие длится 90 минут</div>
+                  <div class="col-10 context">увеличенная длительность занятий для проведения разминки - 70 минут </div>
                 </div>
                 <div class="row">
                   <div class="col-1 icon">
@@ -311,7 +311,7 @@
               <div class="swiper-wrapper">
                 <div class="carousel_item swiper-slide">
                   <iframe 
-                    width="900" 
+                    width="100%" 
                     height="600" 
                     src="https://www.youtube.com/embed/pIDdUYQ5MRE" 
                     frameborder="0" 
@@ -448,62 +448,6 @@
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
                     allowfullscreen>
                   </iframe>
-                </div>
-                <div class="carousel_item swiper-slide">
-                  <div class="wrapper">
-                    <img class="d-block w-100" src=<%=require( "./img/wave.jpg")%> alt="Third slide">
-                    <div class="carousel-caption d-md-block">
-                      <h5>"Волны"</h5>
-                    </div>
-                  </div>
-                </div>
-                <div class="carousel_item swiper-slide">
-                  <div class="wrapper">
-                    <img class="d-block w-100" src=<%=require( "./img/wire.jpg")%> alt="Third slide">
-                    <div class="carousel-caption d-md-block">
-                      <h5>"Верёвочки"</h5>
-                    </div>
-                  </div>
-                </div>
-                <div class="carousel_item swiper-slide">
-                  <div class="wrapper">
-                    <img class="d-block w-100" src=<%=require( "./img/disclosure.jpg")%> alt="Third slide">
-                    <div class="carousel-caption d-md-block">
-                      <h5>"Раскрытия"</h5>
-                    </div>
-                  </div>
-                </div>
-                <div class="carousel_item swiper-slide">
-                  <div class="wrapper">
-                    <img class="d-block w-100" src=<%=require( "./img/roll.jpg")%> alt="Third slide">
-                    <div class="carousel-caption d-md-block">
-                      <h5>Перекаты и перетекания</h5>
-                    </div>
-                  </div>
-                </div>
-                <div class="carousel_item swiper-slide">
-                  <div class="wrapper">
-                    <img class="d-block w-100" src=<%=require( "./img/headwork.jpg")%> alt="Third slide">
-                    <div class="carousel-caption d-md-block">
-                      <h5>Headwork</h5>
-                    </div>
-                  </div>
-                </div>
-                <div class="carousel_item swiper-slide">
-                  <div class="wrapper">
-                    <img class="d-block w-100" src=<%=require( "./img/returns.jpg")%> alt="Third slide">
-                    <div class="carousel-caption d-md-block">
-                      <h5>"Возвраты"</h5>
-                    </div>
-                  </div>
-                </div>
-                <div class="carousel_item swiper-slide">
-                  <div class="wrapper">
-                    <img class="d-block w-100" src=<%=require( "./img/kambre.jpg")%> alt="Third slide">
-                    <div class="carousel-caption d-md-block">
-                      <h5>"Камбре"</h5>
-                    </div>
-                  </div>
                 </div>
               </div>                         
             </div>
@@ -760,7 +704,7 @@
                     <i class="fas fa-ruble-sign"></i>
                     <i class="far fa-smile-wink"></i>
                   </p>
-                  <p class="card-text">Длительность занятия - 90 минут</p>
+                  <p class="card-text">Длительность занятия - 70 минут</p>
                   <p class="card-text little">* Стоимость посещения залов студии Ивара оплачивается отдельно - 300<i class="fas fa-ruble-sign fa-fw"></i></p>
                 </div>
                 <div class="card-footer">
@@ -780,7 +724,7 @@
                     </span>
                   </div>
                   <p class="card-text">При занятиях с парой <br> 2500 <i class="fas fa-ruble-sign fa-fw"></i> </p>
-                  <p class="card-text">Длительность занятия - 90 минут</p>
+                  <p class="card-text">Длительность занятия - 70 минут</p>
                   <p class="card-text little">* Стоимость посещения залов студии Ивара оплачивается отдельно - 300<i class="fas fa-ruble-sign fa-fw"></i></p>
                 </div>
                 <div class="card-footer">
@@ -803,7 +747,7 @@
                   <p class="card-text">Экономия 2 000
                     <i class="fas fa-ruble-sign"></i>
                   </p>
-                  <p class="card-text">Длительность занятия - 90 минут</p>
+                  <p class="card-text">Длительность занятия - 70 минут</p>
                   <p class="card-text little">* Стоимость посещения залов студии Ивара оплачивается отдельно - 300<i class="fas fa-ruble-sign fa-fw"></i></p>
                 </div>
                 <div class="card-footer">
@@ -826,7 +770,7 @@
                   <p class="card-text">Экономия 5 000
                     <i class="fas fa-ruble-sign"></i>
                   </p>
-                  <p class="card-text">Длительность занятия - 90 минут</p>
+                  <p class="card-text">Длительность занятия - 70 минут</p>
                   <p class="card-text little">* Стоимость посещения залов студии Ивара оплачивается отдельно - 300<i class="fas fa-ruble-sign fa-fw"></i></p>
                 </div>
                 <div class="card-footer">
@@ -1045,8 +989,8 @@
           <div class="copyright col-md-6">
             <div class="wrapper d-inline-block">
               <h6>Индивидуальные занятия по зуку (zouk) в Москве </h6>
-              &copy; 2018 год
-              <img src=<%=require( "./img/logo-white.png")%> alt="">
+              &copy; 2020 год
+              <img src=<%=require( "./img/logo_mark_script_gray.png")%> alt="">
             </div>
           </div>
           <div class="wrap_contacts col-lg-3 offset-lg-3 col-md-4 offset-md-2">
