--- a/src/template.html
+++ b/src/template.html
@@ -217,10 +217,10 @@
     <section id="masters" class="animated" data-animation="fadeInUp fadeIn">
       <div class="container andrey">
         <div class="row align-items-center">
-          <div class="col-12">
+          <div class="col-12 header">
             <h2>Преподаватели</h2>
           </div>
-          <div class="col-md-6 image text-center">
+          <div class="col-md-6 image text-center andrey">
             <img src=<%=require( "./img/andrey.jpg")%> alt="">
           </div>
           <div class="col-md-6">
@@ -245,7 +245,7 @@
           </div>
         </div>
       </div>
-      <div class="container irisha">
+      <div class="container alisa">
         <div class="row align-items-center">
           <div class="col-md-5">
             <div class="wrapper align-items-center">
@@ -270,7 +270,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-md-7 image">
+          <div class="col-md-7 image alisa">
             <img src=<%=require( "./img/alisa.jpg")%> alt="">
           </div>
         </div>
@@ -311,8 +311,6 @@
               <div class="swiper-wrapper">
                 <div class="carousel_item swiper-slide">
                   <iframe 
-                    width="100%" 
-                    height="600" 
                     src="https://www.youtube.com/embed/pIDdUYQ5MRE" 
                     frameborder="0" 
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
@@ -321,8 +319,6 @@
                 </div>
                 <div class="carousel_item swiper-slide">
                   <iframe 
-                    width="900" 
-                    height="600" 
                     src="https://www.youtube.com/embed/4zLWt-LcpCE" 
                     frameborder="0" 
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
@@ -331,8 +327,6 @@
                 </div>
                 <div class="carousel_item swiper-slide">
                   <iframe 
-                    width="900" 
-                    height="600" 
                     src="https://www.youtube.com/embed/Ci86wwxCDpw" 
                     frameborder="0" 
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
@@ -341,8 +335,6 @@
                 </div>
                 <div class="carousel_item swiper-slide">
                   <iframe 
-                    width="900" 
-                    height="600" 
                     src="https://www.youtube.com/embed/fy6jwGNzkXA" 
                     frameborder="0" 
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
@@ -351,8 +343,6 @@
                 </div>
                 <div class="carousel_item swiper-slide">
                   <iframe 
-                    width="900" 
-                    height="600" 
                     src="https://www.youtube.com/embed/8oE9VAWIElA" 
                     frameborder="0" 
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
@@ -361,8 +351,6 @@
                 </div>
                 <div class="carousel_item swiper-slide">
                   <iframe 
-                    width="900" 
-                    height="600" 
                     src="https://www.youtube.com/embed/NRsyt2SGxRE" 
                     frameborder="0" 
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
@@ -371,8 +359,6 @@
                 </div>
                 <div class="carousel_item swiper-slide">
                   <iframe 
-                    width="900" 
-                    height="600" 
                     src="https://www.youtube.com/embed/ZpnqBdTMCU0" 
                     frameborder="0" 
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
@@ -381,8 +367,6 @@
                 </div>
                 <div class="carousel_item swiper-slide">
                   <iframe 
-                    width="900" 
-                    height="600" 
                     src="https://www.youtube.com/embed/aoJsOVoSRV0"
                     frameborder="0" 
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
@@ -391,8 +375,6 @@
                 </div>
                 <div class="carousel_item swiper-slide">
                   <iframe 
-                    width="900" 
-                    height="600" 
                     src="https://www.youtube.com/embed/kcmRueNX9FA"
                     frameborder="0" 
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
@@ -401,8 +383,6 @@
                 </div>
                 <div class="carousel_item swiper-slide">
                   <iframe 
-                    width="900" 
-                    height="600" 
                     src="https://www.youtube.com/embed/oPS2iAie4Qk"
                     frameborder="0" 
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
@@ -411,8 +391,6 @@
                 </div>
                 <div class="carousel_item swiper-slide">
                   <iframe 
-                    width="900" 
-                    height="600" 
                     src="https://www.youtube.com/embed/aoJsOVoSRV0"
                     frameborder="0" 
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
@@ -421,8 +399,6 @@
                 </div>
                 <div class="carousel_item swiper-slide">
                   <iframe 
-                    width="900" 
-                    height="600" 
                     src="https://www.youtube.com/embed/Gf4ZWyWVY8A"
                     frameborder="0" 
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
@@ -431,8 +407,6 @@
                 </div>
                 <div class="carousel_item swiper-slide">
                   <iframe 
-                    width="900" 
-                    height="600" 
                     src="https://www.youtube.com/embed/gqIPwOWNbnE" 
                     frameborder="0" 
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
@@ -441,8 +415,6 @@
                 </div>
                 <div class="carousel_item swiper-slide">
                   <iframe 
-                    width="900" 
-                    height="600" 
                     src="https://www.youtube.com/embed/Ot2PLPOgIEA" 
                     frameborder="0" 
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
@@ -591,7 +563,7 @@
                   <div class="wrapper">
                     <div class="carousel-caption">
                       <p class="caption">
-                        “Зук - особенное состояние потока внутри. Благодаря Андрею и Ирине научилась чувствовать и управлять своей мягкостью и расслаблять
+                        “Зук - особенное состояние потока внутри. Благодаря Андрею и Алисе научилась чувствовать и управлять своей мягкостью и расслаблять
                         всю спину и шею. Только сейчас осознала на сколько я была напряжена в других танцах. Заметила, что
                         в жизни тоже появилась эта расслабленность. Ребята объясняют через ощущения и ведение, помогая без
                         ошибок заучивать всё новое. На занятиях в группе не могла почувствовать как правильно двигаться и
