Предварительно сайт готов

--- a/src/template.html
+++ b/src/template.html
@@ -80,8 +80,8 @@
     <section id="main-display">
       <div class="container">
         <div class="row">
-          <div class="half-display col-md-6 text-center d-flex align-items-center justify-content-center">
-            <img src=<%=require( "./img/together.jpg")%> alt="">
+          <div class="half-display col-md-6 text-center d-flex align-items-center justify-content-center masters">
+            <img src=<%=require( "./img/together.gif")%> alt="">
           </div>
           <div class="half-display col-lg-5 offset-lg-1 col-md-6 pl-md-1 d-flex flex-column justify-content-center">
             <div class="wrapper ">
@@ -161,7 +161,7 @@
         <div class="row">
           <div class="col-12">
             <h2>Приемущества индивидуального занятия
-              <br> над групповым</h2>
+              <br /> перед групповым</h2>
           </div>
         </div>
         <div class="row">
@@ -173,7 +173,7 @@
               <div class="header">
                 <h4>Удобное время занятий</h4>
               </div>
-              <p>Не нужно подстраиваться под расписание занятий в группе. Вы занимаетесь тогда когда вам это удобно</p>
+              <p>Не нужно подстраиваться под расписание занятий в группе. <br />Вы занимаетесь тогда когда вам это удобно</p>
             </div>
           </div>
           <div class="item col-lg-3 col-sm-6">
@@ -221,7 +221,7 @@
             <h2>Преподаватели</h2>
           </div>
           <div class="col-md-6 image text-center andrey">
-            <img src=<%=require( "./img/andrey.jpg")%> alt="">
+            <img src=<%=require( "./img/andrey.gif")%> alt="">
           </div>
           <div class="col-md-6">
             <div class="wrapper">
@@ -252,26 +252,32 @@
               <h3>Алиса Канцибер</h3>
               <ul class="fa-ul">
                 <li>
-                  <i class="fa-li fas fa-circle"></i> Занимаюсь танцами в общей сложности 2 года. Начала с бачаты и сальсы. Попробовав зук я поняла что "это моё".  
-                  На данный момент активно развиваюсь в двух танцевальных направлениях: зук и бачата sensual, постоянно улучшаю свою технику и открываю для себя что то новое.
-                  Я помогу вам научиться слышать и чувствовать танец, раскрыв все его грани.
+                  <i class="fa-li fas fa-circle"></i> Занимаюсь танцами в общей сложности 2 года. Начала с бачаты и сальсы.
+                  Впервые увидев зук, я моментально влюбилась в него и поняла "это точно моё". На данный момент активно развиваюсь
+                   в двух танцевальных направлениях: зук и бачата sensual, постоянно улучшаю свою технику и открываю для себя что-то новое.
+                  Я помогу вам учиться слышать и чувствовать танец, раскрывая все его грани. 
                 </li>
                 <li>
-                  <i class="fa-li fas fa-circle"></i>Занятия зуком позволяют развить пластику и гибкость в танце. Овладев техникой зука, вы сможете расслабляться и максимально кайфовать в танце,
-                  чутко слушая и понимая ведение пртнёра. Зук самый интересный и разнообразный танец потому что в нём учавствуют все части тела: волосы, плечи, лопатки, грудная клетка, прорабатывается вся анатомия.
-                  Партнёр ведёт партнёршу не только на шаги и повороты, но и полностью задаёт положение её корпуса в пространстве, может
-                  вести отдельно на движение бёдрами или головой</li>
+                  <i class="fa-li fas fa-circle"></i>Зук – венец социальных танцев. Для меня это самый 
+                  завораживающий и гипнотизирующий, самый воздушный и разнообразный танец, в нём участвует
+                  все тело от кончиков волос до мизинчиков ног. Занятия зуком позволяют развить пластику и 
+                  гибкость в танце, чуткость во взаимодействии с партнером, а также очень развивают умение 
+                  держать баланс, крепко стоять на ногах, делать фееричные повороты и магические headwork.
+                  Овладев техникой зука, вы сможете расслабляться и испытывать невероятное ощущение радости 
+                  в танце, слушая и понимая ведение партнёра.
+                  Всему этому вы научитесь на наших занятиях.</li>
                 <li>
-                  <i class="fa-li fas fa-circle"></i> Зук танцуется на три счёта, его можно танцевать под разную музыку, особенно хорошо заходит под кизомбу,
-                   но у него есть и своя специфическая музыка с характерным ритмом, которая не оставит вас равнодушным.
-                   По зуку постоянно проводятся дискотеки и опер-эйры, конгрессы и фестивали, где вы сможете вдоволь потанцевать этот прекрасный танец в 
-                   кругу единомышленников <i class="far fa-smile"></i>
+                  <i class="fa-li fas fa-circle"></i> Зук можно танцевать под любую музыку на 4 четверти, 
+                  но особенно хорошо танцуется под кизомбу. В зуке есть и своя специальная музыка с характерным 
+                  ритмом, которая не оставит вас равнодушным. Постоянно в Москве и во всем мире проводятся зук 
+                  дискотеки и опер-эйры, конгрессы и фестивали, где вы сможете вдоволь потанцевать этот прекрасный
+                  танец в кругу единомышленников. Вливайтесь в нашу компанию!  <i class="far fa-smile"></i>
                 </li>
               </ul>
             </div>
           </div>
           <div class="col-md-7 image alisa">
-            <img src=<%=require( "./img/alisa.jpg")%> alt="">
+            <img src=<%=require( "./img/alisa.gif")%> alt="">
           </div>
         </div>
       </div>
@@ -475,7 +481,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h2>Что говорят наши клиенты</h2>
+            <h2>Что говорят наши ученики</h2>
           </div>
         </div>
         <div class="row justify-content-center">
@@ -483,6 +489,25 @@
             <div id="reviews_carousel" class="carousel slide" data-ride="carousel" data-interval="8000">
               <div class="carousel-inner">
                 <div class="carousel-item active">
+                  <div class="wrapper">
+                    <div class="carousel-caption">
+                      <p class="caption">
+                        “Зук - это мой первый опыт в социальных танцах, да и в танцах вообще. Поэтому было достаточно сложно адаптироваться, понять
+                        основы, без которых танца как такового не будет. Например, рамка, отклик на ведение, взаимодействие
+                        с партнером. Занятия с Андреем помогли мне вырваться из "начинашек", запустили процесс моего прогресса
+                        в зуке, Андрей исправил множество моих ошибок, научил слушать и слышать ведение (распространенная
+                        проблема начинашек), поставил правильную технику вращений. Я очень благодарна Андрею за потраченное на меня время и за навыки,
+                        которые я приобрела на его занятиях! ;).”
+                      </p>
+                      <img src=<%=require( "./img/testimonial-tatyana-pireeva.jpg")%> alt="" class="face">
+                      <h3 class="name">Татьяна Пыреева</h3>
+                      <small>
+                        <a href="https://vk.com/id1033247" class="link-vk">https://vk.com/id1033247</a>
+                      </small>
+                    </div>
+                  </div>
+                </div>
+                <div class="carousel-item">
                   <div class="wrapper">
                     <div class="carousel-caption">
                       <p class="caption">
@@ -519,27 +544,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="carousel-item">
-                  <div class="wrapper">
-                    <div class="carousel-caption">
-                      <p class="caption">
-                        “Зук - это мой первый опыт в социальных танцах, да и в танцах вообще. Поэтому было достаточно сложно адаптироваться, понять
-                        основы, без которых танца как такового не будет. Например, рамка, отклик на ведение, взаимодействие
-                        с партнером. Занятия с Андреем помогли мне вырваться из "начинашек", запустили процесс моего прогресса
-                        в зуке, Андрей исправил множество моих ошибок, научил слушать и слышать ведение (распространенная
-                        проблема начинашек), поставил правильную технику вращений. Андрей детально разбирает разнообразные
-                        связки, периодически мы записывали демо с наших занятий, что позволяет взглянуть на себя со стороны
-                        и наглядно увидеть свои ошибки. Я очень благодарна Андрею за потраченное на меня время и за навыки,
-                        которые я приобрела на его занятиях! ;).”
-                      </p>
-                      <img src=<%=require( "./img/testimonial-tatyana-pireeva.jpg")%> alt="" class="face">
-                      <h3 class="name">Татьяна Пыреева</h3>
-                      <small>
-                        <a href="https://vk.com/id1033247" class="link-vk">https://vk.com/id1033247</a>
-                      </small>
-                    </div>
-                  </div>
-                </div>
+                
                 <div class="carousel-item">
                   <div class="wrapper">
                     <div class="carousel-caption">
@@ -582,12 +587,12 @@
                   <div class="wrapper">
                     <div class="carousel-caption">
                       <p class="caption">
-                        Занималась индивидуально зуком у Андрея. Ранее этим танцем нигде не занималась.
+                        Занималась индивидуально зуком у Андрея. Ранее этим этому танцу нигде не училась.
                         Андрей доступно объяснил основы зука, с его помощью я освоила как простые, так и более сложные фигуры.
                         Разобралась с приниципами и техникой танца. 
                         Считаю, что индивидуальные занятия намного продуктивнее групповых, так как позволяют проработать все нюансы.
                       </p>
-                      <img src=<%=require( "./img/testimonial-yuliya-tishkevich.jpg")%> alt="" class="face">
+                      <img src=<%=require( "./img/testimonial-ekaterina-konovalova.jpg")%> alt="" class="face">
                       <h3 class="name">Екатерина Коновалова</h3>
                       <small>
                         <a href="https://vk.com/id50108384" class="link-vk">https://vk.com/id50108384</a>
@@ -639,6 +644,7 @@
                   <li data-target="#reviews_carousel" data-slide-to="4"></li>
                   <li data-target="#reviews_carousel" data-slide-to="5"></li>
                   <li data-target="#reviews_carousel" data-slide-to="6"></li>
+                  <li data-target="#reviews_carousel" data-slide-to="7"></li>
                 </ol>
                 <a class="carousel-control-prev d-none" href="#reviews_carousel" role="button" data-slide="prev">
                   <i class="fas fa-chevron-circle-left fa-2x"></i>
@@ -663,7 +669,7 @@
         </div>
         <div class="row justify-content-center">
           <div class="card-deck">
-            <div class="wrapper col-lg-3 col-6">
+            <div class="wrapper col-lg-3 col-sm-6 col-9">
               <div class="card">
                 <h5 class="card-title">Первое занятие</h5>
                 <div class="card-body">
@@ -676,7 +682,8 @@
                     <i class="fas fa-ruble-sign"></i>
                     <i class="far fa-smile-wink"></i>
                   </p>
-                  <p class="card-text">Длительность занятия - 70 минут</p>
+                  <p class="card-text">Длительность занятия</p>
+                  <p>70 минут</p>
                   <p class="card-text little">* Стоимость посещения залов студии Ивара оплачивается отдельно - 300<i class="fas fa-ruble-sign fa-fw"></i></p>
                 </div>
                 <div class="card-footer">
@@ -686,7 +693,7 @@
 
             </div>
 
-            <div class="wrapper  col-6 col-lg-3">
+            <div class="wrapper  col-sm-6 col-9 col-lg-3">
               <div class="card">
                 <h5 class="card-title">Разовое занятие</h5>
                 <div class="card-body">
@@ -696,7 +703,8 @@
                     </span>
                   </div>
                   <p class="card-text">При занятиях с парой <br> 2500 <i class="fas fa-ruble-sign fa-fw"></i> </p>
-                  <p class="card-text">Длительность занятия - 70 минут</p>
+                  <p class="card-text">Длительность занятия</p>
+                  <p>70 минут</p>
                   <p class="card-text little">* Стоимость посещения залов студии Ивара оплачивается отдельно - 300<i class="fas fa-ruble-sign fa-fw"></i></p>
                 </div>
                 <div class="card-footer">
@@ -706,7 +714,7 @@
             </div>
 
 
-            <div class="wrapper col-6 col-lg-3">
+            <div class="wrapper col-sm-6 col-9 col-lg-3">
               <div class="card">
                 <h5 class="card-title">Абонемент на
                   <span class="text-color">8</span> занятий</h5>
@@ -719,7 +727,8 @@
                   <p class="card-text">Экономия 2 000
                     <i class="fas fa-ruble-sign"></i>
                   </p>
-                  <p class="card-text">Длительность занятия - 70 минут</p>
+                  <p class="card-text">Длительность занятия</p>
+                  <p>70 минут</p>
                   <p class="card-text little">* Стоимость посещения залов студии Ивара оплачивается отдельно - 300<i class="fas fa-ruble-sign fa-fw"></i></p>
                 </div>
                 <div class="card-footer">
@@ -729,7 +738,7 @@
 
             </div>
 
-            <div class="wrapper  col-6 col-lg-3">
+            <div class="wrapper  col-sm-6 col-9 col-lg-3">
               <div class="card">
                 <h5 class="card-title">Абонемент на
                   <span class="text-color">16</span> занятий</h5>
@@ -742,7 +751,8 @@
                   <p class="card-text">Экономия 5 000
                     <i class="fas fa-ruble-sign"></i>
                   </p>
-                  <p class="card-text">Длительность занятия - 70 минут</p>
+                  <p class="card-text">Длительность занятия</p>
+                  <p>70 минут</p>
                   <p class="card-text little">* Стоимость посещения залов студии Ивара оплачивается отдельно - 300<i class="fas fa-ruble-sign fa-fw"></i></p>
                 </div>
                 <div class="card-footer">
